SLVS-2405 Add serialization tests for vb.net